Fix tater images overflowing their container

--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ h1, h2 {
 }
 
 .tater > .imagewrapper > img {
+	overflow: hidden;
 	background-color: rgba(0, 0, 0, 0.2);
 }
 
